--- a/templates/complete.html
+++ b/templates/complete.html
@@ -26,7 +26,7 @@
             📄 Generate PDF Report
           </button>
           <button id="homeButton" type="button" class="btn btn-outline-secondary fw-bold px-4" disabled>
-            🔙 Home Page
+            🔙 Dashboard
           </button>
         </div>
 
@@ -121,4 +121,3 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 
 {% endblock %}
-
