--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@
 body {
   background-color: #a26acc;
   color: #e1d9d1;
-  font-family: 'Oktah', sans-serif;
+  font-family: 'Verdana', sans-serif;
   padding-top: 70px;
   padding-left: 25px;
   padding-right: 25px;
